<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ru.test</groupId>
    <artifactId>smoky-mirror-simple</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>apache-m2-snapshot</id>
            <name>Maven Central Repository</name>
            <url>http://repo1.maven.org/maven2/</url>
        </repository>
    </repositories>

    <!--<dependencies>-->
        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlet &ndash;&gt;-->
        <!--<dependency>-->
            <!--<groupId>org.eclipse.jetty</groupId>-->
            <!--<artifactId>jetty-servlet</artifactId>-->
            <!--<version>9.4.11.v20180605</version>-->
        <!--</dependency>-->
    <!--</dependencies>-->

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.1.1</version>
                <configuration>
                    <assembleDirectory>target</assembleDirectory>
                    <programs>
                        <program>
                            <mainClass>ru.test.Main</mainClass>
                            <name>smoky-mirror</name>
                        </program>
                    </programs>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase><goals><goal>assemble</goal></goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
